--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,123 @@
 @import "tailwindcss";
 
+/* css for standings */
+.standings-table {
+  font-family: 'Inter', sans-serif;
+  text-align: center; 
+  border: 4px solid #FFE99A;
+  background: white;  
+  color: black;
+}
 
-/* i didnt make a change */
+.standings-table th, .standings-table td {
+  padding: 8px 12px;         
+  /* provides inner-padding for the names */
+  border: 1px solid #FFE99A;
+}
+
+.standings-table th {
+  color: black;
+  /* color of the elements inside table */
+}
+
+.rank-1 { background-color: #2e7d32; }
+.rank-2 { background-color: #388e3c; }
+.rank-3 { background-color: #43a047; }
+.rank-4 { background-color: #66bb6a;}
+.rank-5 { background-color: #a5d6a7;}
+.rank-6 { background-color: #e0e0e0;}
+.rank-7, .rank-8, .rank-9, .rank-10 { background-color: 	#e0e0e0; }
+.rank-11, .rank-12 { background-color: #f8bdbd; }
+.rank-13, .rank-14 { background-color: 	#e53935; }
+.rank-15, .rank-16 { background-color:#c62828; }
+
+
+/* css for score */
+.record-table {
+  background-color: #e3d1f8;
+  font-family: 'Inter' ,sans-serif;
+  text-align: center;
+}
+
+.record-table th,
+.record-table td {
+  /* css of inner elements of table */
+  border: 2px solid black;
+  padding: 12px;
+  color: red;
+}
+
+.record-table .title {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 10px;
+  background-color: #e3d1f8;
+}
+
+
+/* css for Roster */
+.pokemon-table {
+  text-align: center;
+}
+
+.pokemon-table td {
+  padding: 10px;
+  vertical-align: top;
+}
+
+.pokemon-table img {
+  width: 40px;
+  height: 40px;
+  display: block;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.pokemon-table .name {
+  margin-top: 5px;
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 14px;
+}
+
+.first-five{
+  display: block;
+}
+
+.second-five{
+  display: block;
+}
+
+/* css for playerScedhule */
+
+.schedule-table { 
+  font-family: 'Inter', sans-serif;
+  background-color: #1e2a38;
+  color: #f0f0f0;
+  border: 2px solid #2980b9;
+}
+
+.schedule-table th,
+.schedule-table td {
+  padding: 12px;
+  text-align: center;
+  border: 1px solid #34495e;
+}
+
+.schedule-table th {
+  background-color: #2980b9;
+  color: white;
+  font-size: 16px;
+}
+
+.table-title {
+  background-color: #1abc9c;
+  font-size: 22px;
+  font-weight: bold;
+  border-bottom: 3px solid #16a085;
+}
+
+.container-dashboard{
+  display: flex;
+}
