--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+
 @import "tailwindcss";
 
 /* css for standings */
@@ -34,7 +35,7 @@
 
 /* css for score */
 .record-table {
-  background-color: #BFC0C0;
+  background-color: #e3d1f8;
   font-family: 'Inter' ,sans-serif;
   text-align: center;
 }
@@ -44,8 +45,7 @@
   /* css of inner elements of table */
   border: 2px solid black;
   padding: 12px;
-  color: #1E2A38;
-  font-family: 'Inter', sans-serif;
+  color: red;
 }
 
 .record-table .title {
@@ -53,7 +53,7 @@
   font-size: 20px;
   font-weight: bold;
   padding: 10px;
-  background-color: #BFC0C0;
+  background-color: #e3d1f8;
 }
 
 
@@ -90,39 +90,39 @@
 .second-five{
   display: block;
 }
+
 /* css for playerScedhule */
 
 .schedule-table { 
   font-family: 'Inter', sans-serif;
-  background-color: #BFC0C0;
-  color: #1E2A38;
-  border: 2px solid black;
+  background-color: #1e2a38;
+  color: #f0f0f0;
+  border: 2px solid #2980b9;
 }
 
 .schedule-table th,
 .schedule-table td {
-	border: 2px solid black;
-	padding: 12px;
-	color: #1E2A38;
-	font-family: 'Inter', sans-serif;
+  padding: 12px;
+  text-align: center;
+  border: 1px solid #34495e;
 }
 
 .schedule-table th {
-  background-color: #BFC0C0;
-  color: #1E2A38;
+  background-color: #2980b9;
+  color: white;
   font-size: 16px;
 }
 
 .table-title {
+  background-color: #1abc9c;
   font-size: 22px;
-  font-weight: 700;
-  color:#1E2A38;
+  font-weight: bold;
+  border-bottom: 3px solid #16a085;
 }
 
-/* styles for dashboard  */
-
+/* styles for dashboard and flex content of tables */
 .container-dashboard{
-  background-color: #BFC0C0;
+background-color: #BFC0C0;
   height: auto;
   border: black solid 5px;
   margin: 0px 25%;
@@ -204,4 +204,3 @@
   margin-top: 0;
   letter-spacing: -1px;
 }
-
