--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,16 +1,36 @@
 @import "tailwindcss";
 
 @theme {
-  --color-background-primary: #BFC0C0;
-  --color-background-secondary: #4F5D75;
-  --color-background-surface: #FFFFFF;
-  --color-background-nav: #2D3142;
+    --color-background-main: #BFC0C0;
+    --color-background-primary: #2D3142;
+    --color-background-secondary: #4F5D75;
+    --color-background-tertiary: #F3F4F6;
+    --color-background-surface: #FFFFFF;
 
-  --color-text-primary: #0F172A;
-  --color-text-secondary: #64748B;
-  --color-text-on-nav: #FFFFFF;
-  --color-text-on-accent: #FFFFFF;
+    --color-text-primary: #0F172A;
+    --color-text-secondary: #64748B;
+    --color-text-on-nav: #FFFFFF;
+    --color-text-on-accent: #FFFFFF;
 
-  --color-accent-primary: #4F46E5;
-  --color-accent-primary-hover: #6366F1;
+    --color-accent-primary: #4F46E5;
+    --color-accent-alt: #4F46E5;
+    --color-accent-primary-hover: #6366F1;
+
+    --color-warning-100: #FFFBEB;
+    --color-warning-200: #FEF3C7;
+    --color-warning-500: #FBBF24;
+    --color-warning-700: #B45309;
+
+    --color-error-100: #FEF2F2;
+    --color-error-200: #FEE2E2;
+    --color-error-500: #EF4444;
+    --color-error-700: #B91C1C;
+
+    --color-success-100: #D1FAE5;
+    --color-success-500: #10B981;
+    --color-success-700: #047857;
+
+    --color-info-100: #DBEAFE;
+    --color-info-500: #3B82F6;
+    --color-info-700: #1D4ED8;
 }
